[package]
name = "cursive-test"
version = "0.1.0"
authors = ["Andreas Arvidsson <andreas.arvidson@gmail.com>"]
edition = "2018"

[dependencies]
enumset = "1.0.0"
rand = "0.7.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cursive]
version = "0.15.0"
features = ["toml"]
